# CppND-Capstone-Project-PicturePatch

./: .gitignore  CMakeLists.txt  README.md
config/: exp.yaml
include/: app.h  image.h  parser.h
src/: app.cpp  image.cpp  main.cpp  parser.cpp
test/: utest_image.cpp
